test/functions/ferguson/query/query-generic-type-leaf-borrowed.good
query-generic-type-leaf-borrowed.chpl:15: In function 'f':
query-generic-type-leaf-borrowed.chpl:15: warning: need '(?)' on the type 'GenericClass' of the formal 'x' because this type is generic
query-generic-type-leaf-borrowed.chpl:38: error: unresolved call 'f(Wrapper(OtherGenericClass(int(64))))'
query-generic-type-leaf-borrowed.chpl:15: note: this candidate did not match: f(x: Wrapper(borrowed GenericClass))
query-generic-type-leaf-borrowed.chpl:15: note: because an argument was incompatible
query-generic-type-leaf-borrowed.chpl:38: note: other candidates are:
query-generic-type-leaf-borrowed.chpl:12: note:   Wrapper.f
